--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,6 @@
 [submodule "zlib"]
 	path = zlib
+   url = https://github.com/tryashtar/zlib-win-build
 [submodule "leveldb-mcpe"]
    url = https://github.com/tryashtar/leveldb-mcpe
 	path = leveldb-mcpe
