--- a/ImageMap4/ImageMap4.csproj
+++ b/ImageMap4/ImageMap4.csproj
@@ -8,6 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icons\item_frame.png" />
+    <None Remove="Icons\map_background.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Icons\item_frame.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Icons\map_background.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
   </ItemGroup>
 
