Test loading bedrock images

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "utils.utility"]
 	path = utils.utility
 	url = https://github.com/tryashtar/utils.utility
+[submodule "level-db-wrapper"]
+	path = level-db-wrapper
+	url = https://github.com/tryashtar/level-db-wrapper
