--- a/ImageMap4/Properties/Settings.settings
+++ b/ImageMap4/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="BedrockFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)">%localappdata%\Packages\Microsoft.MinecraftUWP_8wekyb3d8bbwe\LocalState\games\com.mojang\minecraftWorlds</Value>
     </Setting>
+    <Setting Name="StretchChoice" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="ScaleChoice" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
