Bless you imagesharp, look how insanely easy it is to quantize

--- a/ImageMap4/Properties/Settings.settings
+++ b/ImageMap4/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="ScaleChoice" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="DitherChoice" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
