Bring back distance algorithms (surprised that ImageSharp doesn't seem to have native support for it, had to copy/paste+modify some classes)

--- a/ImageMap4/Properties/Settings.settings
+++ b/ImageMap4/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="DitherChoice" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="AlgorithmChoice" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
