--- a/ImageMap4/ImageMap4.csproj
+++ b/ImageMap4/ImageMap4.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="colourful" Version="3.1.0" />
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.3.0" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
