Move Bedrock to update system too

--- a/ImageMap4/Resources/versions.yaml
+++ b/ImageMap4/Resources/versions.yaml
@@ -1,3 +1,22 @@
+bedrock:
+- name: ""
+  check:
+    version: [1,2]
+  map_data:
+    mapId: '@id'
+    parentMapId: -1
+    colors: '@colors'
+    mapLocked: 1
+    scale: 4
+    dimension: 0
+    fullyExplored: 1
+    unlimitedTracking: 0
+    xCenter: 2147483647
+    zCenter: 2147483647
+    height: 128
+    width: 128
+
+java:
 - name: Beta 1.8
   check:
     path: [MapFeatures]
@@ -58,7 +77,7 @@
   - 00d93a
   - 15141f
   - 700200
-- name: 13w43a
+- name: 1.7 # 13w43a
   check:
     path: [Player, HealF]
   multipliers: [180, 220, 255, 135]
@@ -69,7 +88,7 @@
     id: minecraft:filled_map
     Damage: '@s'
     Count: 1b
-- name: 1.8.1-pre1
+- name: 1.8 # 1.8.1-pre1
   check:
     path: [GameRules, doEntityDrops]
   set_base_colors:
@@ -109,7 +128,7 @@
   - 00d93a
   - 815631
   - 700200
-- name: 16w21a
+- name: 1.10 # 16w21a
   check:
     data_version: 503
   structures_supported: true
@@ -119,7 +138,7 @@
     Facing: 1b
     Fixed: 1b
     Invulnerable: 1b
-- name: 16w32a
+- name: 1.11 # 16w32a
   check:
     data_version: 800
   map_entity:
@@ -127,7 +146,7 @@
     Facing: 1b
     Fixed: 1b
     Invulnerable: 1b
-- name: 17w17a
+- name: 1.12 # 17w17a
   check:
     data_version: 1128
   add_base_colors:
@@ -147,7 +166,7 @@
   - 4c522a
   - 8e3c2e
   - 251610
-- name: 17w47a
+- name: 1.13 # 17w47a
   check:
     data_version: 1451
   structure_folder: generated
@@ -168,7 +187,7 @@
     zCenter: 2147483647
     trackingPosition: 0b
     unlimitedTracking: 0b
-- name: 1.16-pre6
+- name: 1.16 # 1.16-pre6
   check:
     data_version: 2562
   add_base_colors:
@@ -185,7 +204,7 @@
   add_base_colors:
   - 646464
   - d8af93
-- name: 21w16a
+- name: 1.17+ # 21w16a
   check:
     data_version: 2711
   add_base_colors:
