Change ID context menu
Also look up UUIDs on Mojang's API to fill in username

--- a/ImageMap4/Properties/Settings.settings
+++ b/ImageMap4/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="InventoryChoice" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="UsernameCache" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
