Show a warning icon on import conflicts

--- a/ImageMap4/ImageMap4.csproj
+++ b/ImageMap4/ImageMap4.csproj
@@ -10,8 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icons\glow_item_frame.png" />
     <None Remove="Icons\item_frame.png" />
     <None Remove="Icons\map_background.png" />
+    <None Remove="Icons\warning.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,11 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Icons\glow_item_frame.png" />
     <Resource Include="Icons\item_frame.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Icons\map_background.png" />
+    <Resource Include="Icons\warning.png" />
   </ItemGroup>
 
   <ItemGroup>
