--- a/ImageMap4/ImageMap4.csproj
+++ b/ImageMap4/ImageMap4.csproj
@@ -115,7 +115,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy /y &quot;$(SolutionDir)leveldb_mcpe_win_amd64.dll&quot; &quot;$(ProjectDir)$(OutDir)&quot;&#xD;&#xA;xcopy /y &quot;$(SolutionDir)leveldb_mcpe_win32.dll&quot; &quot;$(ProjectDir)$(OutDir)&quot;&#xD;&#xA;if $(ConfigurationName) == Release (powershell Compress-Archive -Path '$(TargetDir)*.dll', '$(TargetDir)*.exe' -DestinationPath '$(TargetDir)ImageMap4.zip' -Force)" />
+    <Exec Command="xcopy /y &quot;$(SolutionDir)leveldb_mcpe_win_amd64.dll&quot; &quot;$(ProjectDir)$(OutDir)&quot;&#xD;&#xA;xcopy /y &quot;$(SolutionDir)leveldb_mcpe_win32.dll&quot; &quot;$(ProjectDir)$(OutDir)&quot;" />
   </Target>
   <Target Name="Test" AfterTargets="Publish">
     <Exec Command="xcopy /y &quot;$(SolutionDir)leveldb_mcpe_win_amd64.dll&quot; &quot;$(ProjectDir)bin\Publish&quot;&#xD;&#xA;xcopy /y &quot;$(SolutionDir)leveldb_mcpe_win32.dll&quot; &quot;$(ProjectDir)bin\Publish&quot;&#xD;&#xA;powershell Compress-Archive -Path '$(ProjectDir)bin\Publish\*.dll', '$(ProjectDir)bin\Publish\*.exe' -DestinationPath '$(ProjectDir)bin\Publish\ImageMap4.zip' -Force" />
