Hold shift to add an additional source of worlds to the list

--- a/ImageMap4/App.config
+++ b/ImageMap4/App.config
@@ -7,11 +7,19 @@
     </configSections>
     <userSettings>
         <ImageMap4.Properties.Settings>
-            <setting name="JavaFolder" serializeAs="String">
-                <value>%appdata%\.minecraft\saves</value>
+            <setting name="JavaFolders" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>%appdata%\.minecraft\saves</string>
+                    </ArrayOfString>
+                </value>
             </setting>
-            <setting name="BedrockFolder" serializeAs="String">
-                <value>%localappdata%\Packages\Microsoft.MinecraftUWP_8wekyb3d8bbwe\LocalState\games\com.mojang\minecraftWorlds</value>
+            <setting name="BedrockFolders" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>%localappdata%\Packages\Microsoft.MinecraftUWP_8wekyb3d8bbwe\LocalState\games\com.mojang\minecraftWorlds</string>
+                    </ArrayOfString>
+                </value>
             </setting>
             <setting name="StretchChoice" serializeAs="String">
                 <value>0</value>
